--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Note</string>
+    <string name="app_name">MAT</string>
 
     <string name="title">標題</string>
     <string name="enter_title">輸入標題</string>
     <string name="content">內容</string>
     <string name="enter_content">輸入內容</string>
+    <string name="about">這是Note筆記本應用程式</string>
+    <string name="version">版本：Note_0.2.4</string>
 </resources>
