自定義item畫面，長案有問題待查

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="enter_content">輸入內容</string>
     <string name="about">這是Note筆記本應用程式</string>
     <string name="version">版本：Note_0.2.4</string>
+    <string name="delete">刪除</string>
+    <string name="delete_item">確定要刪除 %1$d 個項目？</string>
 </resources>
